plugins {
    id 'java'
    id 'jacoco'
}

group = 'com.oodesigns'
version = '1.0-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(22)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.add("--enable-preview")
}

repositories {
    mavenCentral()
}

dependencies {
    // Testing
    testImplementation platform('org.junit:junit-bom:5.11.0')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation 'org.junit.jupiter:junit-jupiter-api'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.mockito:mockito-core:5.14.1'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.14.1'
    testImplementation 'org.testcontainers:testcontainers:2.0,3'
    testImplementation 'org.testcontainers:testcontainers-postgresql:2.0.3'
    testImplementation 'org.testcontainers:testcontainers-junit-jupiter:2.0.3'
    
    // Database
    implementation 'org.jooq:jooq:3.19.0'
    implementation 'org.postgresql:postgresql:42.7.3'
    
    // Main dependencies
    implementation 'jakarta.annotation:jakarta.annotation-api:2.1.1'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.18.0'
    implementation 'com.bucket4j:bucket4j_jdk17-core:8.15.0'
    implementation 'org.springframework.security:spring-security-crypto:7.0.2'
    implementation 'commons-logging:commons-logging:1.2'
    implementation 'io.jsonwebtoken:jjwt-api:0.12.1'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.1'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.1'
}

test {
    useJUnitPlatform {
        excludeTags 'integration'
    }
    jvmArgs = [
        '--enable-preview',
        '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
        '--add-opens', 'java.base/java.lang.invoke=ALL-UNNAMED',
        '--add-opens', 'java.base/java.lang.reflect=ALL-UNNAMED',
        '--add-opens', 'java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED'
    ]
    finalizedBy jacocoTestReport
}

tasks.register('integrationTest', Test) {
    testClassesDirs = sourceSets.test.output.classesDirs
    classpath = sourceSets.test.runtimeClasspath
    useJUnitPlatform {
        includeTags 'integration'
    }
    shouldRunAfter test
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
        csv.required = false
    }
}

jacocoTestCoverageVerification {
    violationRules {
        rule {
            limit {
                minimum = 0.80
            }
        }
    }
}